kube-config-3/todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  labels:
    app: todo-api
spec:
  selector:
    app: todo-api
  type: NodePort
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      nodePort: 30036
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  labels:
    app: todo-api
spec:
  selector:
    matchLabels:
      app: todo-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - image: kvarc/final-test-docker:latest
          name: todo-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: todo-api
