kube-config-3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: todo-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: todo.kube.kfj.io # Valid FQDN
      http:
        paths:
          - path: /
            backend:
              serviceName: todo-api
              servicePort: 8081
